name:         bindings-GLFW
version:      0.0.0
category:     Graphics

author:       Brian Lewis <brian@lorf.org>
maintainer:   Brian Lewis <brian@lorf.org>

license:      BSD3
license-file: LICENSE

synopsis:     Low-level bindings to GLFW OpenGL library
description:
  Low-level bindings to GLFW, an Open Source, multi-platform library for
  creating windows with OpenGL contexts and managing input and events. See
  <http://www.glfw.org/>.
  .
  The bound version of GLFW is 3.0.1, released 2013-06-17. See
  <http://www.glfw.org/Version-3.0.1-released.html>.
  .
  /These bindings are too low-level for normal use./ For higher-level bindings,
  see GLFW-b: <http://hackage.haskell.org/package/GLFW-b>.

cabal-version: >= 1.10
build-type:    Custom

--------------------------------------------------------------------------------

extra-source-files:
  Makefile
  build/glfw/lib/cocoa/.build-tag

  glfw/deps/EGL/*.h
  glfw/deps/GL/*.h

  glfw/include/os/unix-like/*.h
  glfw/include/GLFW/*.h

  glfw/src/*.c
  glfw/src/*.h
  glfw/src/*.m

--------------------------------------------------------------------------------

library
  default-language: Haskell2010

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  exposed-modules:
    Bindings.GLFW

  build-tools:
    hsc2hs

  build-depends:
    base          < 5,
    bindings-DSL == 1.0.*

  include-dirs:
    glfw/include
    glfw/src

  if !os(darwin)
    c-sources:
      glfw/src/clipboard.c
      glfw/src/context.c
      glfw/src/gamma.c
      glfw/src/init.c
      glfw/src/input.c
      glfw/src/joystick.c
      glfw/src/monitor.c
      glfw/src/time.c
      glfw/src/window.c
      glfw/src/glx_context.c

  if os(linux) || os(freebsd)
    include-dirs:
      -- Note: glfw/include/os/unix-like/config.h is the config.h created by
      --       CMake on my Linux system
      glfw/include/os/unix-like
    c-sources:
      glfw/src/x11_clipboard.c
      glfw/src/x11_gamma.c
      glfw/src/x11_init.c
      glfw/src/x11_joystick.c
      glfw/src/x11_monitor.c
      glfw/src/x11_time.c
      glfw/src/x11_unicode.c
      glfw/src/x11_window.c
    extra-libraries:
      GL
      X11
      Xi
      Xrandr
      Xxf86vm
      pthread
  else
    if os(darwin)
      extra-libraries: glfw
      extra-lib-dirs: build
      ghc-options: -fPIC
    else
      if os(mingw32)
        c-sources:
          glfw/src/win32_clipboard.c
          glfw/src/win32_gamma.c
          glfw/src/win32_init.c
          glfw/src/win32_joystick.c
          glfw/src/win32_monitor.c
          glfw/src/win32_time.c
          glfw/src/win32_window.c
        extra-libraries:
          opengl32

--------------------------------------------------------------------------------

test-suite main
  default-language: Haskell2010

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs

  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    HUnit                == 1.2.*,
    base                  < 5,
    bindings-GLFW        == 0.0.*,
    test-framework       == 0.8.*,
    test-framework-hunit == 0.3.*

--------------------------------------------------------------------------------

source-repository head
  type:     git
  location: git://github.com/bsl/bindings-GLFW.git
